cabal-version:       3.0
name:                om-logging
version:             1.1.0.0
synopsis:            Opinionated logging utilities.
description:         Opinionated logging utilities.
homepage:            https://github.com/owensmurray/om-logging
license:             NONE
license-file:        LICENSE
author:              Rick Owens
maintainer:          rick@owensmurray.com
copyright:           2021 Owens Murray, LLC.
-- category:            
build-type:          Simple
extra-source-files:  README.md

common dependencies
  build-depends:
    , aeson        >= 2.0.3.0   && < 2.1
    , base         >= 4.15.1.0  && < 4.16
    , bytestring   >= 0.10.12.1 && < 0.11
    , fast-logger  >= 3.1.1     && < 3.2
    , monad-logger >= 0.3.36    && < 0.4
    , om-show      >= 0.1.2.0   && < 0.2
    , split        >= 0.2.3.4   && < 0.3
    , text         >= 1.2.5.0   && < 1.3
    , time         >= 1.9.3     && < 1.10

common warnings
  ghc-options:
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wredundant-constraints
    -Wall

library
  import: warnings, dependencies
  exposed-modules:     
    OM.Logging
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs:      src
  default-language:    Haskell2010

